# validate

./: README.md  object_flow_programming_language_spec_v0.md  pyproject.toml
ofplang/: references.py
ofplang/validate/: __init__.py  __main__.py  cli.py  contracts.py  diagnostics.py  entry.py  errors.py  features.py  generics.py  identifiers.py  imports.py  nodes.py  objects.py  phases.py  references.py  scheduling.py  script.py  shape.py  traits.py  typecheck.py  types.py  validator.py  views.py  yamlnode.py
tests/: test_cli.py  test_positions.py
tests/conformance/: README.md  cases.py  test_conformance.py
tests/conformance/cases/features/: derived_omitted.expected.yaml  derived_omitted.yaml
tests/conformance/cases/references/: object_via_bind.expected.yaml  object_via_bind.yaml
tests/conformance/cases/types/: array_internal_whitespace.expected.yaml  array_internal_whitespace.yaml
